@@ -1,6 +1,15 @@
 ----------------------------------------
 Release Notes for TriBITS
 ----------------------------------------
+2017/09/25:
+
+(*) MINOR: Added cache and enve vars CTEST_SUBMIT_RETRY_COUNT and
+    CTEST_SUBMIT_RETRY_DELAY to allow the number of ctest_submit() submit
+    attemtps to retry and how how log to pause between retries.  Before, these
+    were hard-coded to 25 and 120 respectively, which means that something
+    like a MySQL insertion error could consume as much as 50 minutes befor
+    moving on!  The new defalts are set at 5 retries with a 3 sec delay (which
+    appear to be the CTest defaults).
 
 2017/09/05:
 
